# co_claims

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.ui  Dockerfile_gdelt_scraper  Makefile  RAGIngest.py  RAGSearch.py  RAGService.py  README.md  docker-compose.ec2.yml  docker-compose.yml  logger_utils.py  requirements-ml.txt  requirements.txt  setup.md  ticker_extraction.py  ui.py  validate_bedrock_signature_error.py
RAG/: RAGSearch.py  RAGService.py  retriever.py
RAG/tests/: embedding_test.py  test.py
baseline/: main.py
baseline/evaluator/: contradiction.py
brainstorm/baseline/: .gitignore
datasets/: Dockerfile_gdelt_scraper  README.md  SEC_Edgar_Scraper.ipynb  append_csvs.py  download_media_reliability.py  ds_eda.ipynb  filter_tickers.py  inspect_cleaned_parquets.ipynb  process_csv.py  process_parquet.py  scraper.py  scraper_s3.py
docker/: Dockerfile.api  docker-compose.yml
eval/: __init__.py  config.py  main.py  pipeline.py
eval/baseline/: pyproject.toml
eval/debate/: __init__.py  adjudicator.py  debaters.py
eval/escalator/: __init__.py  router.py
eval/evaluator/: __init__.py  executor.py
eval/evidence/: __init__.py  triage.py
eval/full/: main.py  pipeline.py
gold/: claim_generation.py  end_to_end_eval.py  gold_dataset.json  gold_evaluation.py  gold_scores_raw.json  grouping.ipynb  retrieval_eval.py  sampling.ipynb  schema_eval.py
hybrid/: pyproject.toml
hybrid/evaluator/: evaluator.py  extractor.py  judge.py  metrics.py  similarity.py
hybrid/tests/: synthetic_test.py
llm/: pipeline.py
qdrant_storage/: raft_state.json
(+83 files in other folders)
