# install command: pip install -e .

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid"
version = "0.1.0"
description = "Deterministic framework for evaluating AI company claims"
authors = [
    { name = "Nick Melamed" }
]
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "spacy>=3.7",
    "sentence-transformers>=2.2"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]